--- a/aula12/assets/css/styles.css
+++ b/aula12/assets/css/styles.css
@@ -23,8 +23,73 @@ header nav ul li {
     display: inline-block;
     font-size: 20px;
     font-weight: bold;
-    color: white;
     padding: 15px 0 0 50px;
 }
 
+nav ul li a{
+    text-decoration: none;
+    color: white;
+}
 
+header nav form{
+    display: inline-block;
+    margin-left: 400px;;
+}
+
+.container{
+    width: 960px;
+    height: 650px;
+    margin: 40px auto;
+}
+
+.product{
+    width: 300px;
+    height: 300px;
+    background-color: black;
+    background-size: cover;
+    background-position: center;
+    display: inline-block;
+    margin: 10px 0 0 10px ;
+}   
+
+.img-label{
+    width: 70px;
+    margin-left: 226px;
+    margin-top: 5px;
+}
+
+.product-image-1{
+    background-image: url("../../img/product-1.jpg");
+    background-position: center;
+    float: left;
+}
+
+.product-image-2{
+    background-image: url("../../img/product-2.jpg");
+    background-position: center;
+    float: left;
+}
+
+.product-image-3{
+    background-image: url("../../img/product-3.jpg");
+    background-position: center;
+    float: left;
+}
+
+.name-product{
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    background-color: black;
+    height: 30px;
+    margin: 50px 0;
+    padding: 10px;
+}
+
+.see-more{
+    background-color: #ff4500;
+    color: white;
+    width: 90px;
+    height: 40px;
+    margin: 0px 100px ;
+}
