--- a/aula17/views/index.ejs
+++ b/aula17/views/index.ejs
@@ -35,7 +35,7 @@
                     <div class="card-body">
                     <h5 class="card-title"><%= card.titulo %> </h5>
                     <p class="card-text"><%= card.texto %> </p>
-                    <a href="#" class="btn btn-primary"><%= card.botao %> </a>
+                    <a href="#" class="btn btn-primary"><%= card.botaogis %> </a>
                     </div>
                 </div>
                 <% }); %>
