Adicionante restante das pendências

--- a/aula31/public/stylesheets/style.css
+++ b/aula31/public/stylesheets/style.css
@@ -15,6 +15,11 @@ a {
 form textarea {
   resize: none;
 }
+.container{
+  margin-top: 100px;
+}
+
+
 
 .page-min-height {
   height: calc(100vh - 100px);
